Time: 30 ms (88.41%), Space: 59.1 MB (60.13%) - LeetHub